mock the left nav

--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "bootstrap": "~3.3.4",
     "vec2d": "~2.1.0",
     "fontawesome": "~4.3.0",
-    "angular-minicolors": "~0.0.5"
+    "angular-minicolors": "~0.0.5",
+    "gsap": "~1.16.1"
   }
 }
