--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,9 @@
     "fontawesome": "~4.3.0",
     "angular-minicolors": "~0.0.5",
     "gsap": "~1.16.1",
-    "html2canvas": "~0.4.1"
+    "html2canvas": "~0.4.1",
+    "owl-carousel": "1.3.2",
+    "angular-slick": "~0.2.1",
+    "jcarousel": "~0.3.3"
   }
 }
