--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,8 @@
     "html2canvas": "~0.4.1",
     "owl-carousel": "1.3.2",
     "angular-slick": "~0.2.1",
-    "jcarousel": "~0.3.3"
+    "jcarousel": "~0.3.3",
+    "ngstorage": "~0.3.4",
+    "underscore": "~1.8.3"
   }
 }
