--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,8 @@
     "angular-slick": "~0.2.1",
     "jcarousel": "~0.3.3",
     "ngstorage": "~0.3.4",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "lodash": "~3.9.3",
+    "angular-loading-bar": "~0.7.1"
   }
 }
